treebo exit intent

--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
                         <div class="clearfix"></div>
                         <div class="align-items-center mt-ot mr-bt">
                             <div class="col-sm-12 text-center">
-                                <form id="submit" method="post" action="#">
-                                    <input type="text" autocomplete="off" name="mobile" class="txtbx" placeholder="Enter number to get more offers" id="mobile"><input type="submit" class="btnst" value="Submit" id="submitBtn" onclick="collectPhone()"> </form>
+                                
+                                    <input type="text" autocomplete="off" name="mobile" class="txtbx" placeholder="Enter number to get more offers" id="mobile"><input type="submit" class="btnst" value="Submit" id="submitBtn" onclick="collectPhone()"> 
                                 <div class="errorTxt"></div>
                             </div>
                         </div>
