--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 		<br><br><title>Unsubscribe from email</title>
 		<!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
- 
+    
+  <link rel="manifest" href="/manifest.json">
+
 
 		<script type="text/javascript">
      var clevertap = {event:[], profile:[], account:[], onUserLogin:[], notifications:[]};
