--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <html>
 	
 	<head>
+  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-M79JT6S');</script>
+<!-- End Google Tag Manager -->
   <link rel="manifest" href="/manifest.json">
 		<br><br><title>Unsubscribe from email</title>
 		<!-- Bootstrap CSS -->
-   
+    
     
     <style type="text/css">
       .wzrk-alert {
@@ -81,6 +88,10 @@ webengage.init("8261823a");
 	</head>
 	
 	<body align="center">
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M79JT6S"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
   <script type="text/javascript">
     clevertap.notifications.push({
     "titleText":'Would you like to receive Push Notifications?',
