--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 
       function squareharsh(){
-        console.log("Harsh SHah square");
+        alert("Harsh SHah square");
       }
     
 
