--- a/index.html
+++ b/index.html
@@ -99,12 +99,12 @@ mixpanel.track(
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
   <script type="text/javascript">
-    clevertap.notifications.push({
-    "titleText":'Would you like to receive Push Notifications?',
-    "bodyText":'We promise to only send you relevant content and give you updates on your transactions',
-    "okButtonText":'Sign me up!',
-    "rejectButtonText":'No thanks',
-    "okButtonColor":'#f28046'});
+    // clevertap.notifications.push({
+    // "titleText":'Would you like to receive Push Notifications?',
+    // "bodyText":'We promise to only send you relevant content and give you updates on your transactions',
+    // "okButtonText":'Sign me up!',
+    // "rejectButtonText":'No thanks',
+    // "okButtonColor":'#f28046'});
   </script>
   
 		<a href="#exampleModal">Modal trigger</a>
