--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@ mixpanel.init("59542b07243aba2848dc2d61c9c87daf");</script><!-- end Mixpanel -->
 
 
 
+
+
+
+
 <!-- End Google Tag Manager -->
   <link rel="manifest" href="/manifest.json">
 		<br><br><title>Unsubscribe from email</title>
@@ -91,6 +95,23 @@ mixpanel.track(
         alert("Harsh SHah square");
       }
     
+
+
+<script type="text/javascript">
+(function(i,s,o,g,r,a,m,n){
+i['moengage_object']=r;t={}; q = function(f){return function(){(i['moengage_q']=i['moengage_q']||[]).push({f:f,a:arguments});};};
+f = ['track_event','add_user_attribute','add_first_name','add_last_name','add_email','add_mobile',
+'add_user_name','add_gender','add_birthday','destroy_session','add_unique_user_id','moe_events','call_web_push','track','location_type_attribute'];
+for(k in f){t[f[k]]=q(f[k]);}
+a=s.createElement(o);m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m);
+i['moe']=i['moe'] || function(){n=arguments[0];return t;}; a.onload=function(){if(n){i[r] = moe(n);}};
+})(window,document,'script','https://cdn.moengage.com/webpush/moe_webSdk.min.latest.js','Moengage');
+
+Moengage = moe({
+app_id:"3TJT3KF8TXUDSU16QZANRL04",
+debug_logs: 1
+});
+</script>
 
 
 
