--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ debug_logs: 1
 
 	</head>
 	
-	<body align="center">
+	<body align="center" id="containerbody">
   <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M79JT6S"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
