--- a/index.html
+++ b/index.html
@@ -3,13 +3,6 @@
 	<head>
 
 
-
-
-
-
-
-
-
 <!-- End Google Tag Manager -->
   <link rel="manifest" href="manifest.json">
 		<br><br><title>Unsubscribe from email</title>
@@ -35,7 +28,7 @@
 }
 
     </style>
-
+    <!-- CleverTap -->
 		<script type="text/javascript">
      var clevertap = {event:[], profile:[], account:[], onUserLogin:[], notifications:[]};
      clevertap.account.push({"id": "W67-774-7Z5Z"});
@@ -47,6 +40,10 @@
     		 var s = document.getElementsByTagName('script')[0];
     		 s.parentNode.insertBefore(wzrk, s);
       })();
+    
+    window._izq = window._izq || []; window._izq.push(["init"]);</script><script src="https://cdn.izooto.com/scripts/c055429ae1692b709fd942f263e71740bfcd7c09.js">
+
+
 
 
 </script>
