--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
     <!-- CleverTap -->
 		<script type="text/javascript">
      var clevertap = {event:[], profile:[], account:[], onUserLogin:[], notifications:[]};
+     clevertap.enablePersonalization = true;
+		
      clevertap.account.push({"id": "W67-774-7Z5Z"});
       (function () {
     		 var wzrk = document.createElement('script');
