--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html><html lang="en"><head><title>Unsubscribe from email</title><script type="text/javascript">var clevertap = {event:[], profile:[], account:[], onUserLogin:[], notifications:[]};
-clevertap.account.push({"id": "ZWW-WWW-WWRZ"});
+clevertap.account.push({"id": "W67-774-7Z5Z"});
 (function () {
     var wzrk = document.createElement('script');
     wzrk.type = 'text/javascript';
