--- a/index.html
+++ b/index.html
@@ -35,4 +35,7 @@ function unsubscribe() {
 // call this function to resubscribe the user
 function resubscribe() {
     $WZRK_WR.subEmail();
-}</script></body></html>
+}</script>
+      <script>console.log(""+clevertap.getCleverTapID())</script>
+      
+      </body></html>
