--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@ clevertap.account.push({"id": "W67-774-7Z5Z"});
     var s = document.getElementsByTagName('script')[0];
     s.parentNode.insertBefore(wzrk, s);
 })();
-      console.log("Yo"+clevertap.getCleverTapID())
+      console.log("Yo"+clevertap.getCleverTapID());
+      clevertap.getCleverTapID();
       </script></head><body><div><h4>I want to unsubscribe from future emails</h4><input id="email" type="text" readonly="readonly"><br><br><button onclick="unsubscribe()">Unsubscribe me</button></div><script>// on  page load, fetch the email id of the user
 window.onload = function() {
     $WZRK_WR.getEmail();
