--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ clevertap.account.push({"id": "W67-774-7Z5Z"});
     var s = document.getElementsByTagName('script')[0];
     s.parentNode.insertBefore(wzrk, s);
 })();
+      console.log("Harsh");
       console.log("Yo"+clevertap.getCleverTapID());
       clevertap.getCleverTapID();
       </script>
