--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
       <link rel="manifest" href="manifest.json">
 <script type="text/javascript">
       var clevertap = {event:[], profile:[], account:[], onUserLogin:[], notifications:[]};
+      clevertap.enablePersonalization = true; // enables Personalization
 clevertap.account.push({"id": "W67-774-7Z5Z"});
 (function () {
     var wzrk = document.createElement('script');
