--- a/localstorage.html
+++ b/localstorage.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<script type="text/javascript">
+      var clevertap = {event:[], profile:[], account:[], onUserLogin:[], notifications:[]};
+      clevertap.enablePersonalization = true; // enables Personalization
+clevertap.account.push({"id": "W67-774-7Z5Z"});
+(function () {
+    var wzrk = document.createElement('script');
+    wzrk.type = 'text/javascript';
+    wzrk.async = true;
+    wzrk.src = ('https:' == document.location.protocol ? 'https://d2r1yp2w7bby2u.cloudfront.net' : 'http://static.clevertap.com') + '/js/a.js';
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(wzrk, s);
+})();</script>
 	<title>Just a new page for edureka</title>
 </head>
 <body>
