--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 
 <!DOCTYPE html><html lang="en"><head><title>Unsubscribe from email</title>
       <link rel="manifest" href="manifest.json">
+      <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-M79JT6S');</script>
+<!-- End Google Tag Manager -->
 <script type="text/javascript">
       var clevertap = {event:[], profile:[], account:[], onUserLogin:[], notifications:[]};
       clevertap.enablePersonalization = true; // enables Personalization
@@ -18,7 +25,14 @@ clevertap.account.push({"id": "W67-774-7Z5Z"});
       clevertap.getCleverTapID();
       </script>
       </head>
-      <body><div><h4>I want to unsubscribe from future emails</h4><input id="email" type="text" readonly="readonly"><br><br><button onclick="unsubscribe()">Unsubscribe me</button></div><script>// on  page load, fetch the email id of the user
+      <body>
+            <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M79JT6S"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+            
+            
+            <div><h4>I want to unsubscribe from future emails</h4><input id="email" type="text" readonly="readonly"><br><br><button onclick="unsubscribe()">Unsubscribe me</button></div><script>// on  page load, fetch the email id of the user
 window.onload = function() {
     $WZRK_WR.getEmail();
 };
