--- a/customrendering.html
+++ b/customrendering.html
@@ -3,6 +3,10 @@
 <!DOCTYPE html><html lang="en"><head><title>Unsubscribe from email</title>
       <link rel="manifest" href="manifest.json">
       <!-- Google Tag Manager -->
+      <script
+  src="https://code.jquery.com/jquery-3.3.1.js"
+  integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+  crossorigin="anonymous"></script>
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
