--- a/customrendering.html
+++ b/customrendering.html
@@ -93,6 +93,8 @@ function resubscribe() {
       //raise the notification viewed and clicked events in the callback
       var message = msg;
       clevertap.raiseNotificationViewed();
+                  console.log(""+msg.msgContent);
+                  console.log(""+msg.msgContent.html);
       console.log(JSON.stringify(msg));//your custom rendering implementation here
       var $button = jQuery("<button></button>");//element on whose click you want to raise the notification clicked event
       $button.click(function(){
