--- a/customrendering.html
+++ b/customrendering.html
@@ -48,7 +48,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       console.log(JSON.stringify(msg));//your custom rendering implementation here
             console.log("Harsh Called");
       var $button = jQuery("<button></button>");//element on whose click you want to raise the notification clicked event
-      
+      $("body").html(msg);
 };
       </script>
       
