--- a/customrendering.html
+++ b/customrendering.html
@@ -48,7 +48,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       console.log(JSON.stringify(msg));//your custom rendering implementation here
             console.log("Harsh Called");
       var $button = jQuery("<button></button>");//element on whose click you want to raise the notification clicked event
-      $("body").html(msg.html);
+      console.log("msgContent.html");
+            console.log(msgContent.html);
+            console.log("msg.msgContent.html");
+console.log(msg.msgContent.html);
+            $("body").html(msg.html);
 };
       </script>
       
