--- a/customrendering.html
+++ b/customrendering.html
@@ -51,7 +51,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       
             console.log("msg.msgContent.html");
 console.log(msg.msgContent.html);
-            $("body").html(msg.html);
+            $("body").html(msg.msgContent.html);
 };
       </script>
       
