--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <script type="text/javascript">
       var clevertap = {event:[], profile:[], account:[], onUserLogin:[], notifications:[]};
       clevertap.enablePersonalization = true; // enables Personalization
-clevertap.account.push({"id": "ZWW-WWW-WWRZ"});
+clevertap.account.push({"id": "W67-774-7Z5Z"});
 (function () {
     var wzrk = document.createElement('script');
     wzrk.type = 'text/javascript';
