--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-M79JT6S');</script>
 <!-- End Google Tag Manager -->
 <script type="text/javascript">
-      var clevertap = {event:[], profile:[], account:[], onUserLogin:[], notifications:[], region:'in'};
+      var clevertap = {event:[], profile:[], account:[], onUserLogin:[], notifications:[]};
       clevertap.enablePersonalization = true; // enables Personalization
 clevertap.account.push({"id": "W67-774-7Z5Z"});
 (function () {
