--- a/ankush.html
+++ b/ankush.html
@@ -1,2 +1,1 @@
-Hello world
-<iframe src="https://eu1.dashboard.clevertap.com/W67-774-7Z5Z/my-board.html"></iframe>
+<iframe src="https://eu1.dashboard.clevertap.com/W67-774-7Z5Z/my-board.html" style="width:100%;height:100%;"></iframe>
