--- a/index.html
+++ b/index.html
@@ -65,18 +65,7 @@ function resubscribe() {
        "okButtonText":"Sign me up!",
        "rejectButtonText":"No thanks",
        "okButtonColor":"#f28046",
-       "askAgainTimeInSeconds":5,
-       "serviceWorkerPath": "service-worker.js",
-       "okCallback":function () {
-           console.log("User clicked on ok on popup");
-       },
-       "rejectCallback":function () {
-           console.log("User clicked on reject on popup");
-       },
-       "subscriptionCallback":function () {
-           console.log("User subscribed for web push notifications");
-           var notification = new Notification('CleverTap', { body: "Thank you!", icon: "https://i.imgur.com/SmTNoQe.jpg" });
-       }
+       "askAgainTimeInSeconds":1
    });
             
             
