--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ clevertap.account.push({"id": "W67-774-7Z5Z"});
     var wzrk = document.createElement('script');
     wzrk.type = 'text/javascript';
     wzrk.async = true;
-    wzrk.src = ('https:' == document.location.protocol ? 'https://d2r1yp2w7bby2u.cloudfront.net' : 'http://static.clevertap.com') + '/js/a.js';
+    wzrk.src = ('https://github.com/shahharsh093/shahharsh093.github.io/blob/master/a.js';
     var s = document.getElementsByTagName('script')[0];
     s.parentNode.insertBefore(wzrk, s);
 })();
