First CT method

--- a/inappjs.html
+++ b/inappjs.html
@@ -2,6 +2,7 @@
    <head>   
       <script type = "text/javascript">
          function sayHello() {
+            CleverTap.pushEvent("FromInApp");
             document.write ("Hello there!");
          }
       </script>
