Stringify JSON to pass to CT

--- a/inappjs.html
+++ b/inappjs.html
@@ -13,7 +13,8 @@
          function pushProperty(){
             if(typeof CleverTap !== "undefined" && CleverTap !== null) {
                var JSONObj = { "foo1":"darshan", "bar1":"pania" };
-               CleverTap.pushProfile(JSONObj);
+               var JSONString = JSON.stringify(JSONObj);
+               CleverTap.pushProfile(JSONString);
                document.write ("Profile pushed!");
             } else {
                document.write ("Not raising event in browser!");
