Update and rename glovo to glovo.html

--- a/glovo.html
+++ b/glovo.html
@@ -5,7 +5,7 @@
 
      var clevertap = {event:[], profile:[], account:[], onUserLogin:[], notifications:[]};
  // replace with the CLEVERTAP_ACCOUNT_ID with the actual ACCOUNT ID value from your Dashboard -> Settings page
- clevertap.account.push({"id": "848-4Z4-845Z"});
+ clevertap.account.push({"id": "W67-774-7Z5Z"});
  (function () {
 		 var wzrk = document.createElement('script');
 		 wzrk.type = 'text/javascript';
