--- a/unsub.html
+++ b/unsub.html
@@ -1,5 +1,6 @@
 <html lang="en">
 <head>
+	<link rel="manifest" href="/manifest.json">
     <script type="text/javascript">
         // Copy and paste the below code snippet inside the <head></head> section of your website
 
