--- a/nykaa.html
+++ b/nykaa.html
@@ -1,6 +1,8 @@
 <html>
 <head>
+<link href="/manifest.json" />
 <script type="text/javascript">
+
      var clevertap = {event:[], profile:[], account:[], onUserLogin:[], notifications:[], privacy:[]};
  // replace with the CLEVERTAP_ACCOUNT_ID with the actual ACCOUNT ID value from your Dashboard -> Settings page
 clevertap.account.push({"id": "W67-774-7Z5Z"});
