--- a/nykaa.html
+++ b/nykaa.html
@@ -16,7 +16,22 @@ clevertap.privacy.push({useIP: false}); //set the flag to true, if the user agre
 		 var s = document.getElementsByTagName('script')[0];
 		 s.parentNode.insertBefore(wzrk, s);
   })();
+	
+	
+	
+	
 </script>
+	
+	
+	<script type="text/javascript">
+(function(w, d, s, u) {
+    w.Verloop = function(c) { w.Verloop._.push(c) }; w.Verloop._ = []; w.Verloop.url = u;
+    var h = d.getElementsByTagName(s)[0], j = d.createElement(s); j.async = true;
+    j.src = 'https://wizrocket.verloop.io/livechat/script.min.js';
+    h.parentNode.insertBefore(j, h);
+})(window, document, 'script', 'https://wizrocket.verloop.io/livechat');
+</script>
+	
 
 </head>
 <body>
