--- a/unsubglovo.html
+++ b/unsubglovo.html
@@ -1,5 +1,7 @@
 <html lang="en">
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <script type="text/javascript">
         // Copy and paste the below code snippet inside the <head></head> section of your website
 
