--- a/unsub.html
+++ b/unsub.html
@@ -2,7 +2,7 @@
 <head>
 	<link rel="manifest" href="/manifest.json">
     <script type="text/javascript">
-        // Copy and paste the below code snippet inside the <head></head> section of your website
+        // Copy & paste the below code snippet inside the <head></head> section of your website
 
      var clevertap = {event:[], profile:[], account:[], onUserLogin:[], notifications:[]};
  // replace with the CLEVERTAP_ACCOUNT_ID with the actual ACCOUNT ID value from your Dashboard -> Settings page
