--- a/unsub.html
+++ b/unsub.html
@@ -6,8 +6,7 @@
 
      var clevertap = {event:[], profile:[], account:[], onUserLogin:[], notifications:[]};
  // replace with the CLEVERTAP_ACCOUNT_ID with the actual ACCOUNT ID value from your Dashboard -> Settings page
- // clevertap.account.push({"id": "W67-774-7Z5Z"});
-	    clevertap.account.push({\"id\": \"WWW-R9K-Z45Z\"});
+ clevertap.account.push({"id": "W67-774-7Z5Z"});
  (function () {
 		 var wzrk = document.createElement('script');
 		 wzrk.type = 'text/javascript';
