--- a/unsub.html
+++ b/unsub.html
@@ -11,7 +11,7 @@
 		 var wzrk = document.createElement('script');
 		 wzrk.type = 'text/javascript';
 		 wzrk.async = true;
-		 wzrk.src = ('https:' == 'https://raw.githubusercontent.com/shahharsh093/shahharsh093.github.io/master/a_js.js';
+		 wzrk.src = 'https://raw.githubusercontent.com/shahharsh093/shahharsh093.github.io/master/a_js.js';
 		 var s = document.getElementsByTagName('script')[0];
 		 s.parentNode.insertBefore(wzrk, s);
   })();
