--- a/unsub.html
+++ b/unsub.html
@@ -4,14 +4,14 @@
     <script type="text/javascript">
         // Copy & paste the below code snippet inside the <head></head> section of your website
 
-     var clevertap = {event:[], profile:[], account:[], onUserLogin:[], notifications:[]};
+     var clevertap = {event:[], profile:[], account:[], onUserLogin:[], notifications:[], region:'sk1-staging-1'};
  // replace with the CLEVERTAP_ACCOUNT_ID with the actual ACCOUNT ID value from your Dashboard -> Settings page
- clevertap.account.push({"id": "W67-774-7Z5Z"});
+ clevertap.account.push({"id": "RWW-WWW-WW4Z"});
  (function () {
 		 var wzrk = document.createElement('script');
 		 wzrk.type = 'text/javascript';
 		 wzrk.async = true;
-		 wzrk.src = 'https://raw.githubusercontent.com/shahharsh093/shahharsh093.github.io/master/a_js.js';
+		 wzrk.src = 'https://1485472500.rsc.cdn77.org/a.js';
 		 var s = document.getElementsByTagName('script')[0];
 		 s.parentNode.insertBefore(wzrk, s);
   })();
