--- a/unsub.html
+++ b/unsub.html
@@ -2,21 +2,20 @@
 <head>
 	<link rel="manifest" href="/manifest.json">
     <script type="text/javascript">
-        // Copy & paste the below code snippet inside the <head></head> section of your website
-
-     var clevertap = {event:[], profile:[], account:[], onUserLogin:[], notifications:[], region:'sk1-staging-1'};
+     var clevertap = {event:[], profile:[], account:[], onUserLogin:[], notifications:[], privacy:[]};
  // replace with the CLEVERTAP_ACCOUNT_ID with the actual ACCOUNT ID value from your Dashboard -> Settings page
- clevertap.account.push({"id": "RWW-WWW-WW4Z"});
+clevertap.account.push({"id": "W67-774-7Z5Z"});
+clevertap.privacy.push({optOut: false}); //set the flag to true, if the user of the device opts out of sharing their data
+clevertap.privacy.push({useIP: false}); //set the flag to true, if the user agrees to share their IP data
  (function () {
 		 var wzrk = document.createElement('script');
 		 wzrk.type = 'text/javascript';
 		 wzrk.async = true;
-		 wzrk.src = 'https://1485472500.rsc.cdn77.org/a.js';
+		 wzrk.src = ('https:' == document.location.protocol ? 'https://d2r1yp2w7bby2u.cloudfront.net' : 'http://static.clevertap.com') + '/js/a.js';
 		 var s = document.getElementsByTagName('script')[0];
 		 s.parentNode.insertBefore(wzrk, s);
   })();
-
-    </script>
+</script>
     
     <style>
         .body{
